# feedon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  feedon.db  pyproject.toml  requirements.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
feedon/: __init__.py  utils.py
feedon/blueprints/: auth.py  feeds.py  landing_pages.py  rss.py  static.py  timelines.py
feedon/db/: __init__.py  migrations.py
feedon/services/: timelines.py
feedon/static/: style.css
feedon/templates/auth/: delete.html  login.html
feedon/templates/feeds/: atom.xml
feedon/templates/landing_pages/: index.html
feedon/templates/layouts/: main.html
feedon/templates/rss/: feed.xml
feedon/templates/timelines/: index.html
