[tool.poetry]
name = "feedon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.6.2"
certifi = "2023.7.22"
charset-normalizer = "3.1.0"
click = "8.1.3"
flask = "2.3.2"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.3"
peewee = "3.16.2"
requests = "2.31.0"
urllib3 = "2.0.7"
werkzeug = "2.3.8"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
