[tool.poetry]
name = "feedon"
version = "0.1.0"
description = "FeeDon is a service for Mastodon instances that allows users to generate RSS feeds from their home timeline, local timeline..."
authors = ["Steve Gattuso <steve@stevegattuso.me>", "Kosta <kosta.construct520@8shield.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.6.2"
certifi = "2024.2.2"
charset-normalizer = "3.1.0"
click = "8.1.3"
flask = "2.3.2"
idna = "3.7"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.3"
peewee = "3.16.2"
requests = "2.32.0"
urllib3 = "2.2.2"
werkzeug = "3.0.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
